<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Makers</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="google_btn">Войти через Google</string>
    <string name="sign_in">Войти</string>
    <string name="register">Зарегестрироваться</string>
    <string name="remembered">Вспомнил пароль</string>
    <string name="res">Сбросить пароль</string>
    <string name="contin">Продолжить</string>
    <string name="repeat">Повторите пароль</string>
    <string name="title_home">Главная</string>
    <string name="title_schedule">Расписание</string>
    <string name="title_notifications">Избранное</string>
    <string name="personal_account">Кабинет</string>
    <string name="connect">Связаться</string>
    <string name="title_activity_bottom_navigation_top">BottomNavigationTop</string>
    <string name="title_dashboard">Dashboard</string>
</resources>