<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tokhirzhon.learn.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.tokhirzhon.learn.ui.favourite.FavouriteFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigatioon_schedule"
        android:name="com.tokhirzhon.learn.ui.schedule.Schedule"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />


    <fragment
        android:id="@+id/navigation_connect"
        android:name="com.tokhirzhon.learn.ui.connect.FragmentConnect"
        android:label="@string/connect"
        tools:layout="@layout/fragment_connect" />

</navigation>
