<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:id="@+id/maker_Logo"
        android:foregroundGravity="center"
        android:src="@drawable/makers_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_btn"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/sign_in_btn"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maker_Logo" />

    <TextView
        android:id="@+id/reg_txt"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_btn" />

    <Button
        android:layout_width="308dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/google_sign_in_btn"
        android:text="@string/google_btn"
        android:textColor="#2B59C3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_txt"
        tools:layout_editor_absoluteX="411dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="50dp"
        android:paddingEnd="40dp"
        android:drawableStart="@drawable/google_logo"
        />



</androidx.constraintlayout.widget.ConstraintLayout>