<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:id="@+id/maker_Logo"
        android:foregroundGravity="center"
        android:src="@drawable/makers_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="308dp"
        android:layout_height="50dp"
        android:layout_marginTop="65dp"
        android:layout_marginStart="48dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/state_btn_change"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15sp"
        android:textColor="@drawable/text_btn_color"
        android:textColorHint="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/maker_Logo"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/reset"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/sign_in_btn"
        android:hint="@string/res"
        android:paddingStart="15sp"
        android:textColorHint="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/remembered"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/remembered"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <include
        layout="@layout/google_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remembered"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/reg_txt"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="#2B59C3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>